/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.ethereum;

import "core.proto";

message RingBatch {
    message Ring {
        repeated int32 order_indexes = 1;
    }

    string fee_recipient            = 1;
    string miner                    = 2;
    string sig                      = 3;
    repeated Ring rings             = 4;
    repeated io.lightcone.core.RawOrder  orders        = 5;
    io.lightcone.core.SigningAlgorithm sign_algorithm = 6;
    string hash                     = 7;
    string transaction_origin       = 8;
}

message RingBatchContext {
    string fee_recipient            = 1;
    string miner                    = 2;
    string transaction_origin       = 3;
    string miner_private_key        = 4;
    string lrc_address              = 5;
}
